Created buttons that select players move and trigger playRound()

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</button>
     <button id="Scissors">Scissors</button>
+    <p>test</p>
 </body>
 </html>
