Changed playRound() to output to DOM with only current round's results

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</button>
     <button id="Scissors">Scissors</button>
-    <p>test</p>
+    <p id="playerMove"></p>
+    <p id="computerMove"></p>
+    <p id="result"></p>
 </body>
 </html>
