Added images for button style and created stylesheet that uses flex display

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
+    <link rel="stylesheet" href="style.css">
     <script src="rps.js" defer></script>
 </head>
 <body>
-    <button id="Rock">Rock</button>
-    <button id="Paper">Paper</button>
-    <button id="Scissors">Scissors</button>
+    <button id="Rock"><img src="rock.png"></button>
+    <button id="Paper"><img src="paper.png"></button>
+    <button id="Scissors"><img src="scissors.png"></button>
     <p id="playerMove"></p>
     <p id="computerMove"></p>
     <p id="result"></p>
