--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <script src="rps.js" defer></script>
 </head>
 <body>
-    <button id="Rock"><img src="rock.png"></button>
-    <button id="Paper"><img src="paper.png"></button>
-    <button id="Scissors"><img src="scissors.png"></button>
-    <p id="playerMove"></p>
-    <p id="computerMove"></p>
-    <p id="result"></p>
+    <!--
+    <div class="header">
+        Rock Paper Scissors
+    </div>-->
+    <div class="buttons">
+        <input type="image" id="Rock" src="rock.png"/>
+        <input type="image" id="Paper" src="paper.png"/>
+        <input type="image" id="Scissors" src="scissors.png"/>
+    </div>
+    <div class="output">
+        <p id="playerMove"></p>
+        <p id="computerMove"></p>
+        <p id="result"></p>
+    </div>
 </body>
 </html>
